# petrock

./: README.md
hardware - kiCad/: outPutLevelShift.kicad_sch  outPutLevelShift.kicad_sch-bak  petRockMain1.kicad_sch  petRockMain1.xml  power_protection.kicad_sch  sym-lib-table
hardware - kiCad/board/: fp-info-cache  fp-lib-table  input_protection.kicad_sch  petRockMain1.kicad_prl  petRockMain1.kicad_pro  petRockMain1.kicad_sch-bak  rtc.kicad_sch
hardware - kiCad/panel/: fp-info-cache  fp-lib-table  input_protection.kicad_sch  outPutLevelShift.kicad_sch  petRockMain1.csv  petRockMain1.kicad_dru  petRockMain1.kicad_pcb  petRockMain1.kicad_prl  petRockMain1.kicad_pro  petRockMain1.kicad_sch  petRockMain1.xml  power_protection.kicad_sch  rtc.kicad_sch
software/firm-1.2/: .IO.h.swp  AlgoBlocks.cpp  AlgoBlocks.h  AlgoCulture.cpp  AlgoCulture.h  AlgoOver.cpp  AlgoOver.h  AlgoPlain.cpp  AlgoPlain.h  AlgoReich.cpp  AlgoReich.h  AlgoSparse.cpp  AlgoSparse.h  AlgoVari.cpp  AlgoVari.h  AlgoWonk.h  Algowonk.cpp  Clock.cpp  Clock.h  CmakeLists.txt  FileSystem.h  IO.h  Light.h  Manager.h  Moon.h  NoTestVars-NoUsbWait-Nanoplanktons.DOIT  PhaseData.h  jfunc.cpp  jfunc.h  main.cpp  readme.md
software/firm-1.2/littlefs-lib/: CMakeLists.txt
software/firm-1.2/stdinit-lib/: CMakeLists.txt  README.md  stdinit.c  stdinit.h
